<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.databasefirst.fragments.ContactFragment">

    <TextView
        android:id="@+id/tv_frag_contacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/tv_login"
        android:gravity="center"
        android:textSize="@dimen/tv_user_pass"
        android:textColor="@color/textView"
        android:text="@string/addContacts"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_frag_contact_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/tv_user_pass_margin"
            android:hint="@string/et_contactNameHint"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_frag_contactNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_contactNumberHint"
            android:layout_margin="@dimen/tv_user_pass_margin"
            android:inputType="number"/>
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/b_frag_addContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/addContacts"
        android:layout_margin="@dimen/tv_user_pass_margin"/>

</LinearLayout>
